<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">zillow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="heading">Search Your Property Here</string>
    <string name="streetAddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="error">This field is required</string>

    <string-array name="state">
        <item>Choose State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_basic_info">BasicInfo</string>
    <string name="title_activity_charts">Charts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="property_type">Property Type</string>
    <string name="year_built">Year Built</string>
    <string name="lot_size">Lot Size</string>
    <string name="finished_area">Finished Area</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="tax_assessment_year">Tax Assessment Year</string>
    <string name="tax_assessment">Tax Assessment</string>
    <string name="last_sold_price">Last Sold Price</string>
    <string name="last_sold_date">Last Sold Date</string>
    <string name="zestimate">Zestimate Property Estimate</string>
    <string name="ochange">30 Days Overall Change</string>
    <string name="all_change">All Time Property Range</string>
    <string name="r_zestimate">Rent Zestimate Valuation as of</string>
    <string name="r_change">30 Days Rent Change</string>
    <string name="all_rchange">All Time Rent Change</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="historical1heading">Historical Zestimate for the past 1 year</string>
    <string name="historical5heading">Historical Zestimate for the past 5 years</string>
    <string name="historical10heading">Historical Zestimate for the past 10 years</string>
    <string name="footer1">\u00a9Zillow,Inc.2006-2014</string>
    <string name="footer2a">Use is subject to</string>
    <string name="footer2b">Terms of use</string>
    <string name="footer3">What is a Zestimate?</string>
    <string name="homeDetails">See more details on Zillow</string>

</resources>
