<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout">

    <TextView android:text="@string/heading" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Address*:"
        android:textSize="18dp"
        android:id="@+id/textViewAddr"
        android:layout_marginTop="21dp"
        android:textColor="@color/white"
        android:layout_below="@+id/heading"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_vertical_margin"
        android:id="@+id/address"
        android:hint="@string/streetAddress"
        android:background="@drawable/values"
        android:layout_below="@+id/textViewAddr"
        android:layout_marginTop="10dp"
        android:paddingLeft="4dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/errorAddress"
        android:text="@string/error"
        android:textColor="@color/red"
        android:layout_below="@+id/address"
        android:visibility="invisible"
        android:textSize="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="City*:"
        android:id="@+id/textViewCity"
        android:layout_marginTop="25dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_below="@+id/address"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin"
        android:id="@+id/city"
        android:hint="@string/city"
        android:background="@drawable/values"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewCity"
        android:paddingLeft="4dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/errorCity"
        android:text="@string/error"
        android:textColor="@color/red"
        android:layout_below="@+id/city"
        android:visibility="invisible"
        android:textSize="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="State*:"
        android:id="@+id/textViewState"
        android:layout_marginTop="25dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:layout_below="@+id/city"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"

        android:prompt="@string/state"
        android:layout_below="@+id/textViewState"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/errorState"
        android:text="@string/error"
        android:textColor="@color/red"
        android:layout_below="@+id/state"
        android:visibility="invisible"
        android:textSize="12dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:text="Search"
        android:id="@+id/search"
        android:layout_below="@+id/state"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:alpha="0.7"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zillowLogo"
        android:layout_alignBottom="@+id/search"
        android:layout_alignEnd="@+id/errorAddress"
        android:src="@drawable/zillowlogo"/>


        <View
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:background="@color/white"
        android:layout_below="@id/errorState"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="No exact match found -- Verify that the address given is correct"
        android:textSize="18dp"
        android:id="@+id/noMatchFound"
        android:layout_marginTop="21dp"
        android:textColor="@color/white"
        android:layout_below="@+id/zillowLogo"
        android:layout_alignParentStart="false"
        android:visibility="invisible"/>

</RelativeLayout>
